--- a/index1.html
+++ b/index1.html
@@ -20,30 +20,23 @@
         </span>
 
         <div class="tools">
-            <i class="fa-solid fa-unlock tools-Elements"></i>
-            <i class="fa-regular fa-hand tools-Elements"></i>
-
-            <a href="./index.html"><i class="fa-solid fa-arrow-pointer tools-Elements arrow"></i></a>
-            <!-- <i class="fa-regular fa-square tools-Elements"></i>
-            <i class="fa-solid fa-diamond tools-Elements"></i>
-            <i class="fa-regular fa-circle tools-Elements"></i>
-            <i class="fa-solid fa-arrow-right tools-Elements"></i>
-            <i class="fa-solid fa-minus tools-Elements"></i> -->
- 
-            <i class="fa-regular fa-square tools-Elements" id="squareTool"></i>
-            <i class="fa-solid fa-diamond tools-Elements" id="diamondTool"></i>
-            <i class="fa-regular fa-circle tools-Elements" id="circleTool"></i>
-            <i class="fa-solid fa-arrow-right tools-Elements" id="arrowTool"></i>
-            <i class="fa-solid fa-minus tools-Elements" id="lineTool"></i>
-          
+            <i class="fa-solid fa-unlock tools-Elements tool-icon" data-tool="unlock"></i>
+            <i class="fa-regular fa-hand tools-Elements tool-icon" data-tool="hand"></i>
+            <a href="./index.html"><i class="fa-solid fa-arrow-pointer tools-Elements arrow tool-icon" data-tool="arrow"></i></a>
+            <i class="fa-regular fa-square tools-Elements tool-icon" id="squareTool" data-tool="square"></i>
+            <i class="fa-solid fa-diamond tools-Elements tool-icon" id="diamondTool" data-tool="diamond"></i>
+            <i class="fa-regular fa-circle tools-Elements tool-icon" id="circleTool" data-tool="circle"></i>
+            <i class="fa-solid fa-arrow-right tools-Elements tool-icon" id="arrowTool" data-tool="arrow-right"></i>
+            <i class="fa-solid fa-minus tools-Elements tool-icon" id="lineTool" data-tool="line"></i>
             <div class="pen-container">
-                <i class="fa-solid fa-pen tools-Elements" id="penIcon"></i>
+                <i class="fa-solid fa-pen tools-Elements tool-icon" id="penIcon" data-tool="pen"></i>
                 <input type="color" id="colorPicker" style="display: none;">
             </div>
-            <i class="fa-solid fa-austral-sign tools-Elements"></i>
-            <i class="fa-regular fa-images tools-Elements"></i>
-            <i class="fa-solid fa-eraser tools-Elements"></i>
-            <i class="fa-solid fa-cubes tools-Elements"></i>
+            <i class="fa-solid fa-austral-sign tools-Elements tool-icon" data-tool="austral-sign"></i>
+            <i class="fa-regular fa-images tools-Elements tool-icon" data-tool="images"></i>
+            <i class="fa-solid fa-eraser tools-Elements tool-icon" data-tool="eraser"></i>
+            <i class="fa-solid fa-cubes tools-Elements tool-icon" data-tool="cubes"></i>
+            
         </div>
 
         <div class="user">
